fix: correct logout function call in customer sidebar

--- a/HotelClient/src/app/app.component.html
+++ b/HotelClient/src/app/app.component.html
@@ -40,7 +40,7 @@
         <span nz-icon nzType="pull-request"></span>
         <span><strong>Bookings</strong></span>
       </li>
-        <li nz-menu-item (click)="logout">
+        <li nz-menu-item (click)="logout()">
         <span nz-icon nzType="logout"></span>
         <span><strong>Logout</strong></span>
       </li>
