calling book room API with dates model box

--- a/HotelClient/src/app/app.component.html
+++ b/HotelClient/src/app/app.component.html
@@ -40,7 +40,7 @@
         <span nz-icon nzType="apartment"></span>
         <span><strong>Rooms</strong></span>
       </li>
-      <li nz-menu-item routerLink="/customer/bookings">
+      <li nz-menu-item routerLink="/customer/book">
         <span nz-icon nzType="pull-request"></span>
         <span><strong>Bookings</strong></span>
       </li>
